# amnogtest

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: pages.yml
amnog-frontend/: next.config.js  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
amnog-frontend/src/app/: globals.css  layout.tsx  page.tsx
amnog-frontend/src/app/api/notify-lead/: route.ts
amnog-frontend/src/app/lead/: LeadClient.tsx
amnog-frontend/src/app/lead/[runId]/: page.tsx
amnog-frontend/src/app/run/: RunClient.tsx  page.tsx
amnog-frontend/src/app/run/[runId]/: page.tsx
amnog-frontend/src/components/shortlist/: CandidateCard.tsx  ExplanationTabs.tsx  LeadGateDialog.tsx  NewRequestButton.tsx  ResultsView.tsx  ScoringExplanationCard.tsx  StepContext.tsx  StepIndication.tsx  StepTherapyArea.tsx  Wizard.tsx  scoringExplanation.ts
amnog-frontend/src/components/ui/: accordion.tsx  badge.tsx  button.tsx  card.tsx  email-gate-card.tsx  input.tsx  privacy-policy.tsx  progress.tsx  select.tsx  separator.tsx  textarea.tsx
amnog-frontend/src/lib/: api.ts  types.ts  validators.ts
app/: domain.py  main.py  models.py  shortlist.py  store.py
app/data/: patient_groups_stats.json  patient_groups_v2.json
data/: app.db  patient_groups.json
docs/: amnog-comparator-shortlist-mvp-plan.md
scripts/: GBA Beschlüsse_2026.xlsx  excel_to_patient_groups_json.py
tests/: test_api.py  test_shortlist.py
